--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@emotion/styled": "^11.6.0",
     "axios": "^0.27.2",
     "framer-motion": "^4.1.17",
+    "isomorphic-unfetch": "^3.1.0",
     "mongoose": "^6.1.2",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.3",
     "swr": "^1.1.0"
   },
   "devDependencies": {
